# posture_bot

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yaml
models/: train.py
src/posture_bot/data/: annotate.py  capture_frames.py  preprocess.py
src/posture_bot/models/: predict_model.py  train_model.py
